--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
                    <key>kind</key>
                    <string>software-package</string>
                    <key>url</key>
-                   <string>https://localhost/test.ipa</string>
+                   <string>raw.githubusercontent.com/smallmuou/itms-services/master/test.ipa</string>
                </dict>
                <dict>
                    <key>kind</key>
