--- a/manifest.plist
+++ b/manifest.plist
@@ -33,7 +33,7 @@
                <key>subtitle</key>
                <string>App Subtitle</string>
                <key>title</key>
-               <string>App Title</string>
+               <string>App Title11</string>
            </dict>
        </dict>
    </array>
